--- a/src/pages/ProjectDetail.css
+++ b/src/pages/ProjectDetail.css
@@ -1,4 +1,4 @@
-.project-details {
+.project-detail {
 display: grid;
 grid-template-columns: 3fr 2fr;
 align-items: start;
@@ -12,13 +12,13 @@ padding: 30px;
 border-radius: 4px;
 }
 
-.project-summary .due-date {
+.project-summary .date {
 margin: 10px 0;
 font-size: 0.9em;
 color: var(--title-color);
 }
 
-.project-summary .details {
+.project-summary .detail {
 margin: 30px 0;
 color: var(--text-color);
 line-height: 1.8em;
