--- a/src/pages/ProjectDetail.css
+++ b/src/pages/ProjectDetail.css
@@ -42,3 +42,13 @@ margin-right: 10px;
 .project-summary + .btn {
 margin-top: 20px;
 }
+
+/* project comments */
+.project-comments label {
+    margin-bottom: 10px;
+}
+
+.project-comments textarea {
+    min-height: 30px;
+    font-size: 1.5em;
+}
