--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -41,7 +41,7 @@
 }
 
 .sidebar .links a.active {
-    color: #555;
+    color: black;
     background: var(--bg-color);
     border-radius: 20px 0 0 20px;
 }
