--- a/src/pages/ProjectDetailPage/ProjectDetail.css
+++ b/src/pages/ProjectDetailPage/ProjectDetail.css
@@ -10,6 +10,15 @@
     background-color: #fff;
     padding: 30px;
     border-radius: 4px;
+    position: relative;
+}
+
+.project-summary .artwork {
+    display: block;
+    max-height: 50%;
+    max-width: 100%;
+    border: 1px solid grey;
+
 }
 
 .project-summary .date {
